--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -15,11 +15,11 @@
     <div class="admin-container">
         <div class="stats-cards">
             <div class="stat-card">
-                <div class="stat-value">1,248</div>
+                <div class="stat-value">{{users_count}}</div>
                 <div class="stat-label">Пользователей</div>
             </div>
             <div class="stat-card">
-                <div class="stat-value">5,673</div>
+                <div class="stat-value">{{tasks_count}}</div>
                 <div class="stat-label">Заметок</div>
             </div>
             <div class="stat-card">
@@ -35,32 +35,24 @@
                     <tr>
                         <th>ID</th>
                         <th>Имя</th>
-                        <th>Email</th>
-                        <th>Роль</th>
+                        <th>Время регистрации</th>
+                        <th>Статус</th>
                         <th>Действия</th>
                     </tr>
                 </thead>
                 <tbody>
+                    {% for user in users %}
                     <tr>
-                        <td>14941580-cd1e-45f1-86d8-7145e215fd3d</td>
-                        <td>Иван Иванов</td>
-                        <td>ivan@example.com</td>
-                        <td><span class="badge badge-success">Пользователь</span></td>
+                        <td>{{user.id}}</td>
+                        <td>{{user.first_name}} {{user.last_name}}</td>
+                        <td>{{user.created_at}}</td>
+                        <td><span class="badge {% if user.is_admin %}badge-success{% else %}badge-warning{% endif %}">{{"Admin" if user.is_admin else "User"}}</span></td>
                         <td>
                             <button class="action-btn edit-btn">Редактировать</button>
                             <button class="action-btn delete-btn">Удалить</button>
                         </td>
                     </tr>
-                    <tr>
-                        <td>#002</td>
-                        <td>Петр Петров</td>
-                        <td>peter@example.com</td>
-                        <td><span class="badge badge-warning">Админ</span></td>
-                        <td>
-                            <button class="action-btn edit-btn">Редактировать</button>
-                            <button class="action-btn delete-btn">Удалить</button>
-                        </td>
-                    </tr>
+                    {% endfor %}
                 </tbody>
             </table>
         </div>
