Sreenshots of interface added

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
             <article class="news-item" style="animation-delay: 0.1s">
                 <div class="news-date">24 марта 2024</div>
                 <h2 class="news-title">Запуск новой платформы</h2>
-                <p class="news-content">Здарова наху!</p>
+                <p class="news-content">Здарова!</p>
             </article>
         </div>
     </div>
